--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-VITE_APP_NAME='Simpledocs Boilerplate'
+VITE_APP_NAME='Telkom University Brand Guidelines'
 VITE_PORT=4000
 VITE_IPBIND='0.0.0.0'
-VITE_BASE_PATH=''
+VITE_BASE_PATH='/docs-tel-u'
