edit app name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "simpledocs-boilerplate",
+    "name": "docs-tel-u",
     "private": true,
     "version": "0.0.1",
     "type": "module",
